fixed footer extra white space

--- a/css/styles.css
+++ b/css/styles.css
@@ -158,6 +158,7 @@ a:hover {
 .contact {
     font-family: 'Inconsolata', sans-serif;
     font-size: calc(10px + (17 - 10) * ((100vw - 320px) / (1600 - 320)));
+    margin-bottom: 0;
     margin-top: 5px;
     text-align: center;
     text-decoration: none;
